Bug 393176 - image not displayed after session restore
Summary: image not displayed after session restore
Status: RESOLVED FIXED
Alias: None
Product: gwenview
Classification: Applications
Component: general (other bugs)
Version First Reported In: 17.12.3
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Gwenview Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-04-16 01:50 UTC by glyphimor
Modified: 2018-04-19 07:34 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 18.04.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description glyphimor 2018-04-16 01:50:56 UTC
System:

Gentoo
kde-apps/gwenview: 17.12.3
kde-frameworks/*: some 5.43, some 5.44

First noticed the issue a couple of weeks ago when I upgraded to gwenview 17.12.3 from 17.12.2 (or maybe 17.12.1).

Bug:

Open an image file in gwenview. Log out of KDE, saving the session. Then log back in, restoring the session. The gwenview window loads, but the image isn't displayed. Instead of being in View Mode, gwenview is in Browse mode, showing the image's directory, w/ the image file highlighted.

Double-checked by wiping my .config directory, and was still able to reproduce the bug.

When I'm working on something I often keep various images loaded in gwenview windows across KDE sessions; after logging in, the bug makes it necessary to go to each gwenview window and re-load the selected image.
Comment 1 null 2018-04-16 10:20:34 UTC
Thanks for the report, can confirm the problem. We already know about this from Bug 387782, but I guess having a separate report makes more sense ;)

I guess the only thing which needs to be done here is remembering the view mode.
Comment 2 glyphimor 2018-04-16 18:30:53 UTC
1 correction: Went back and checked my logs, and the upgrade to gwenview 17.12.3 was actually from gwenview 17.08.3, on April 9. Perhaps 17.08.3 was the last version to store Browse/View correctly.
Comment 3 Peter Mühlenpfordt 2018-04-19 07:34:09 UTC
Git commit cd18339fe959d8f9df3c4962b50df4f8c4755e4c by Peter Mühlenpfordt.
Committed on 19/04/2018 at 07:27.
Pushed by muhlenpfordt into branch 'Applications/18.04'.

Fix View Mode session restore

Summary:
While restoring a saved session the last URL is selected but
View Mode is not triggered. This is caused by wrong order of
switching mode and setting the current URL.
FIXED-IN: 18.04.1

Test Plan:
* Open one or more instances of Gwenview in different states
* Logout with session restore enabled
* Login
* All Gwenview windows should restore in Browse or View Mode

Reviewers: #gwenview, rkflx

Reviewed By: #gwenview, rkflx

Subscribers: rkflx

Differential Revision: https://phabricator.kde.org/D12246

M  +5    -6    app/mainwindow.cpp

https://commits.kde.org/gwenview/cd18339fe959d8f9df3c4962b50df4f8c4755e4c