Fix View Mode session restore

Summary:
While restoring a saved session the last URL is selected but
View Mode is not triggered. This is caused by wrong order of
switching mode and setting the current URL.

BUG: 393176
FIXED-IN: 18.04.1

Test Plan:
* Open one or more instances of Gwenview in different states
* Logout with session restore enabled
* Login
* All Gwenview windows should restore in Browse or View Mode

Reviewers: #gwenview, rkflx

Reviewed By: #gwenview, rkflx

Subscribers: rkflx

Differential Revision: https://phabricator.kde.org/D12246